--- a/01-Introduction/02_Connection_to_datasource_SQL.ipynb
+++ b/01-Introduction/02_Connection_to_datasource_SQL.ipynb
@@ -4,10 +4,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "2a04df37-c521-406f-8c98-1095d790fceb",
      "showTitle": false,
@@ -32,16 +29,16 @@
      },
      "inputWidgets": {},
      "nuid": "61a949c6-b5c6-4a09-abc1-a45414c85e15",
-     "showTitle": false,
+     "showTitle": true,
      "tableResultSettingsMap": {},
-     "title": ""
+     "title": "Untitled"
     }
    },
    "outputs": [],
    "source": [
     "%sql\n",
-    "DROP CATALOG IF EXISTS adventureworks;\n",
-    "DROP CONNECTION IF EXISTS connection_to_sql_datasource;"
+    "DROP CATALOG IF EXISTS lua_adventureworks;\n",
+    "DROP CONNECTION IF EXISTS lua_connection_to_sql_datasource;"
    ]
   },
   {
@@ -63,12 +60,12 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "CREATE CONNECTION IF NOT EXISTS connection_to_sql_datasource TYPE sqlserver\n",
+    "CREATE CONNECTION IF NOT EXISTS lua_connection_to_sql_datasource TYPE sqlserver\n",
     "OPTIONS (\n",
-    "  host 'sql-kil-datasource-prod-001.database.windows.net',\n",
+    "  host 'sql-lua-datasource-prod-001.database.windows.net',\n",
     "  port '1433',\n",
-    "  user 'YOUR_USERNAME',\n",
-    "  password 'YOUR_PASSWORD'\n",
+    "  user 'lua-admin',\n",
+    "  password 'cas-ia2025'\n",
     ");"
    ]
   },
@@ -76,10 +73,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "5bc7db6b-dff0-4164-9c68-2b67d6e8bb83",
      "showTitle": false,
@@ -110,8 +104,8 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "CREATE FOREIGN CATALOG IF NOT EXISTS adventureworks USING CONNECTION connection_to_sql_datasource\n",
-    "OPTIONS (database 'sqldb-kil-adventureworks-prod-001');"
+    "CREATE FOREIGN CATALOG IF NOT EXISTS lua_adventureworks USING CONNECTION lua_connection_to_sql_datasource\n",
+    "OPTIONS (database 'sqldb-lua-adventureworks-prod-001');"
    ]
   },
   {
@@ -132,7 +126,7 @@
    },
    "outputs": [],
    "source": [
-    "SELECT * FROM adventureworks.saleslt.customer"
+    "SELECT * FROM lua_adventureworks.saleslt.customer"
    ]
   }
  ],
