--- a/01-Introduction/02_Connection_to_datasource_SQL.ipynb
+++ b/01-Introduction/02_Connection_to_datasource_SQL.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "2a04df37-c521-406f-8c98-1095d790fceb",
      "showTitle": false,
@@ -73,7 +76,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "5bc7db6b-dff0-4164-9c68-2b67d6e8bb83",
      "showTitle": false,
