Adaptation query bronze

--- a/01-Introduction/Query/10_Discount_Analyse.dbquery.ipynb
+++ b/01-Introduction/Query/10_Discount_Analyse.dbquery.ipynb
@@ -26,8 +26,8 @@
    "outputs": [],
    "source": [
     "SELECT p.Name, SUM(od.UnitPriceDiscount * od.OrderQty) AS TotalDiscountAmount\n",
-    "FROM SalesLT.SalesOrderDetail od\n",
-    "JOIN SalesLT.Product p ON od.ProductID = p.ProductID\n",
+    "FROM bronze.SalesOrderDetail od\n",
+    "JOIN bronze.Product p ON od.ProductID = p.ProductID\n",
     "GROUP BY p.ProductID, p.Name\n",
     "ORDER BY TotalDiscountAmount DESC\n",
     "LIMIT 1;"
@@ -42,10 +42,11 @@
    "inputWidgetPreferences": null,
    "language": "sql",
    "notebookMetadata": {
+    "pythonIndentUnit": 4,
     "sqlQueryOptions": {
      "applyAutoLimit": true,
-     "catalog": "lua_adventureworks",
-     "schema": "saleslt"
+     "catalog": "lua_lakehouse",
+     "schema": "bronze"
     }
    },
    "notebookName": "10_Discount_Analyse.dbquery.ipynb",
