--- a/01-Introduction/Query/2_Nbr_Commandes_par_client.dbquery.ipynb
+++ b/01-Introduction/Query/2_Nbr_Commandes_par_client.dbquery.ipynb
@@ -23,8 +23,8 @@
     "    c.FirstName AS FirstName, \n",
     "    c.LastName AS LastName, \n",
     "    COUNT(o.SalesOrderID) AS TotalOrders\n",
-    "FROM saleslt.Customer AS c\n",
-    "LEFT JOIN saleslt.SalesOrderHeader AS o ON c.CustomerID = o.CustomerID\n",
+    "FROM bronze.Customer AS c\n",
+    "LEFT JOIN bronze.SalesOrderHeader AS o ON c.CustomerID = o.CustomerID\n",
     "GROUP BY c.CustomerID, c.FirstName, c.LastName\n",
     "ORDER BY TotalOrders DESC;"
    ]
@@ -40,8 +40,8 @@
    "notebookMetadata": {
     "sqlQueryOptions": {
      "applyAutoLimit": true,
-     "catalog": "lua_adventureworks",
-     "schema": "saleslt"
+     "catalog": "lua_lakehouse",
+     "schema": "bronze"
     }
    },
    "notebookName": "2_Nbr_Commandes_par_client.dbquery.ipynb",
