--- a/01-Introduction/Query/3_Top_5_Products.dbquery.ipynb
+++ b/01-Introduction/Query/3_Top_5_Products.dbquery.ipynb
@@ -21,7 +21,7 @@
     "SELECT \n",
     "    Name, \n",
     "    ListPrice\n",
-    "FROM saleslt.Product\n",
+    "FROM bronze.Product\n",
     "ORDER BY ListPrice DESC\n",
     "LIMIT 5;"
    ]
@@ -37,8 +37,8 @@
    "notebookMetadata": {
     "sqlQueryOptions": {
      "applyAutoLimit": true,
-     "catalog": "lua_adventureworks",
-     "schema": "saleslt"
+     "catalog": "lua_lakehouse",
+     "schema": "bronze"
     }
    },
    "notebookName": "3_Top_5_Products.dbquery.ipynb",
