--- a/01-Introduction/Query/4_SellEndDate_Is_Null.dbquery.ipynb
+++ b/01-Introduction/Query/4_SellEndDate_Is_Null.dbquery.ipynb
@@ -22,7 +22,7 @@
     "    Name, \n",
     "    ListPrice, \n",
     "    SellEndDate\n",
-    "FROM saleslt.Product\n",
+    "FROM bronze.Product\n",
     "WHERE SellEndDate IS NULL\n",
     "ORDER BY ListPrice DESC;"
    ]
@@ -38,8 +38,8 @@
    "notebookMetadata": {
     "sqlQueryOptions": {
      "applyAutoLimit": true,
-     "catalog": "lua_adventureworks",
-     "schema": "saleslt"
+     "catalog": "lua_lakehouse",
+     "schema": "bronze"
     }
    },
    "notebookName": "4_SellEndDate_Is_Null.dbquery.ipynb",
