--- a/01-Introduction/Query/5_SUM_TotalDue.dbquery.ipynb
+++ b/01-Introduction/Query/5_SUM_TotalDue.dbquery.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "SELECT SUM(TotalDue) AS GlobalRevenue\n",
-    "FROM SalesLT.SalesOrderHeader;"
+    "FROM bronze.SalesOrderHeader;"
    ]
   }
  ],
@@ -39,8 +39,8 @@
    "notebookMetadata": {
     "sqlQueryOptions": {
      "applyAutoLimit": true,
-     "catalog": "lua_adventureworks",
-     "schema": "saleslt"
+     "catalog": "lua_lakehouse",
+     "schema": "bronze"
     }
    },
    "notebookName": "5_SUM_TotalDue.dbquery.ipynb",
