--- a/01-Introduction/Query/6_Order_by_Region.dbquery.ipynb
+++ b/01-Introduction/Query/6_Order_by_Region.dbquery.ipynb
@@ -19,8 +19,8 @@
    "outputs": [],
    "source": [
     "SELECT a.StateProvince, COUNT(oh.SalesOrderID) AS OrderCount\n",
-    "FROM SalesLT.Address a\n",
-    "JOIN SalesLT.SalesOrderHeader oh ON a.AddressID = oh.BillToAddressID\n",
+    "FROM bronze.Address a\n",
+    "JOIN bronze.SalesOrderHeader oh ON a.AddressID = oh.BillToAddressID\n",
     "GROUP BY a.StateProvince\n",
     "ORDER BY a.StateProvince;"
    ]
@@ -36,8 +36,8 @@
    "notebookMetadata": {
     "sqlQueryOptions": {
      "applyAutoLimit": true,
-     "catalog": "lua_adventureworks",
-     "schema": "saleslt"
+     "catalog": "lua_lakehouse",
+     "schema": "bronze"
     }
    },
    "notebookName": "6_Order_by_Region.dbquery.ipynb",
