--- a/01-Introduction/Query/7_Nbr_Product_par_Cathegory.dbquery.ipynb
+++ b/01-Introduction/Query/7_Nbr_Product_par_Cathegory.dbquery.ipynb
@@ -19,8 +19,8 @@
    "outputs": [],
    "source": [
     "SELECT pc.Name AS CategoryName, COUNT(p.ProductID) AS ProductCount\n",
-    "FROM SalesLT.ProductCategory pc\n",
-    "JOIN SalesLT.Product p ON pc.ProductCategoryID = p.ProductCategoryID\n",
+    "FROM bronze.ProductCategory pc\n",
+    "JOIN bronze.Product p ON pc.ProductCategoryID = p.ProductCategoryID\n",
     "GROUP BY pc.Name;"
    ]
   }
@@ -35,8 +35,8 @@
    "notebookMetadata": {
     "sqlQueryOptions": {
      "applyAutoLimit": true,
-     "catalog": "lua_adventureworks",
-     "schema": "saleslt"
+     "catalog": "lua_lakehouse",
+     "schema": "bronze"
     }
    },
    "notebookName": "7_Nbr_Product_par_Cathegory.dbquery.ipynb",
