--- a/01-Introduction/Query/8_Top_3_Best_Clients.dbquery.ipynb
+++ b/01-Introduction/Query/8_Top_3_Best_Clients.dbquery.ipynb
@@ -19,8 +19,8 @@
    "outputs": [],
    "source": [
     "SELECT c.FirstName, c.LastName, SUM(oh.TotalDue) AS TotalRevenue\n",
-    "FROM SalesLT.Customer c\n",
-    "JOIN SalesLT.SalesOrderHeader oh ON c.CustomerID = oh.CustomerID\n",
+    "FROM bronze.Customer c\n",
+    "JOIN bronze.SalesOrderHeader oh ON c.CustomerID = oh.CustomerID\n",
     "GROUP BY c.CustomerID, c.FirstName, c.LastName\n",
     "ORDER BY TotalRevenue DESC\n",
     "LIMIT 3;"
@@ -37,8 +37,8 @@
    "notebookMetadata": {
     "sqlQueryOptions": {
      "applyAutoLimit": true,
-     "catalog": "lua_adventureworks",
-     "schema": "saleslt"
+     "catalog": "lua_lakehouse",
+     "schema": "bronze"
     }
    },
    "notebookName": "8_Top_3_Best_Clients.dbquery.ipynb",
