--- a/01-Introduction/Query/9_SellPrice_Cathegory.dbquery.ipynb
+++ b/01-Introduction/Query/9_SellPrice_Cathegory.dbquery.ipynb
@@ -19,9 +19,9 @@
    "outputs": [],
    "source": [
     "SELECT pc.Name AS CategoryName, SUM(od.LineTotal) AS Revenue\n",
-    "FROM SalesLT.ProductCategory pc\n",
-    "JOIN SalesLT.Product p ON pc.ProductCategoryID = p.ProductCategoryID\n",
-    "JOIN SalesLT.SalesOrderDetail od ON p.ProductID = od.ProductID\n",
+    "FROM bronze.ProductCategory pc\n",
+    "JOIN bronze.Product p ON pc.ProductCategoryID = p.ProductCategoryID\n",
+    "JOIN bronze.SalesOrderDetail od ON p.ProductID = od.ProductID\n",
     "GROUP BY pc.Name\n",
     "ORDER BY Revenue DESC;"
    ]
@@ -37,8 +37,8 @@
    "notebookMetadata": {
     "sqlQueryOptions": {
      "applyAutoLimit": true,
-     "catalog": "lua_adventureworks",
-     "schema": "saleslt"
+     "catalog": "lua_lakehouse",
+     "schema": "bronze"
     }
    },
    "notebookName": "9_SellPrice_Cathegory.dbquery.ipynb",
